--- a/ship/src/main/resources/application.properties
+++ b/ship/src/main/resources/application.properties
@@ -7,9 +7,9 @@ server.servlet.encoding.force=true
 server.servlet.encoding.enabled=true
 
 #dbms
-spring.datasource.url=a
-spring.datasource.username=a
-spring.datasource.password=0
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1234
 
 #mapper-location
 mybatis.mapper-locations=classpath:mapper/**/*.xml
